Bug 493293 - Rectangular region screencast selection is possible only on the leftmost monitor
Summary: Rectangular region screencast selection is possible only on the leftmost monitor
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.1.5
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: multiscreen
Depends on:
Blocks:
 
Reported: 2024-09-17 20:51 UTC by zini.fin+kde
Modified: 2024-10-26 10:27 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.3
Sentry Crash Report:


Attachments
Screen sharing rectangular region selection open only on the leftmost monitor (564.20 KB, image/jpeg)
2024-09-17 20:54 UTC, zini.fin+kde
Details
Portal UI opened by OBS Studio (468.76 KB, image/jpeg)
2024-09-17 21:09 UTC, zini.fin+kde
Details

Note You need to log in before you can comment on or make changes to this bug.
Description zini.fin+kde 2024-09-17 20:51:37 UTC
SUMMARY
When trying to screencast a rectangular region, the region can be drawn only on the leftmost monitor.
The region drawing can start in the leftmost monitor and continue to other monitors, but the selection area will not draw to the other monitors. The selection will however contain the areas in the other monitors and it works fine.

My current monitor setup is this:
- One monitor on the left, vertical 1080x1920
- One monitor on the right, primary, horizontal 1440x2560

The rectangular selection UI will show up on the vertical monitor, but not on the horizontal one. I can't capture a rectangular region that's only on the horizontal monitor as the selection UI closes when I click anywhere that's not in the vertical monitor. See the attached screenshot.

STEPS TO REPRODUCE
1. Open a program that requests a screencasting session (e.g. OBS Studio)
2. Select "Rectangular Region" in the "Screen Sharing" dialog

OBSERVED RESULT
The rectangular region selector opens only on the leftmost monitor.

EXPECTED RESULT
The rectangular region selector is opened on all monitors.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.1.5
KDE Frameworks Version: 6.6.0
Qt Version: 6.7.2

ADDITIONAL INFORMATION
GPU: AMD Radeon RX 7900 XTX
Comment 1 zini.fin+kde 2024-09-17 20:54:18 UTC
Created attachment 173795 [details]
Screen sharing rectangular region selection open only on the leftmost monitor
Comment 2 Nate Graham 2024-09-17 21:01:36 UTC
Are you sure this is the portal recording system, rather than one built into OBS? How exactly are you triggering it in OBS?
Comment 3 zini.fin+kde 2024-09-17 21:07:36 UTC
(In reply to Nate Graham from comment #2)
> Are you sure this is the portal recording system, rather than one built into
> OBS? How exactly are you triggering it in OBS?

I'm selecting the Pipewire screen capture in OBS, which pops up the portal UI visible in this MR that adds the rectangular selection functionality: https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/161.
Comment 4 zini.fin+kde 2024-09-17 21:09:37 UTC
Created attachment 173796 [details]
Portal UI opened by OBS Studio
Comment 5 Nate Graham 2024-09-20 18:17:02 UTC
Thanks. I can reproduce the issue.
Comment 6 Bug Janitor Service 2024-10-22 12:37:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/322
Comment 7 David Redondo 2024-10-23 06:23:50 UTC
Git commit 4042c9d8fb2e6c3d458de7c7e6b5672ff27f5a11 by David Redondo.
Committed on 23/10/2024 at 06:21.
Pushed by davidre into branch 'master'.

Create region selection window before calling setScreen

otherwise it ends up on the wrong screen due to a quirk in how
Qt works. See QTBUG-129989

M  +1    -0    src/region-select/SelectionEditor.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/4042c9d8fb2e6c3d458de7c7e6b5672ff27f5a11
Comment 8 David Redondo 2024-10-23 06:30:54 UTC
Git commit a067b4f536ceeab9f01964e50e99392230aebc53 by David Redondo.
Committed on 23/10/2024 at 06:24.
Pushed by davidre into branch 'Plasma/6.2'.

Create region selection window before calling setScreen

otherwise it ends up on the wrong screen due to a quirk in how
Qt works. See QTBUG-129989


(cherry picked from commit 4042c9d8fb2e6c3d458de7c7e6b5672ff27f5a11)

Co-authored-by: David Redondo <kde@david-redondo.de>

M  +1    -0    src/region-select/SelectionEditor.cpp

https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/commit/a067b4f536ceeab9f01964e50e99392230aebc53