Create region selection window before calling setScreen

otherwise it ends up on the wrong screen due to a quirk in how
Qt works. See QTBUG-129989
BUG:493293